// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`post ++ 1`] = `
Program {
  "children": [
    ExpressionStatement {
      "expression": Post {
        "kind": "post",
        "type": "+",
        "what": Variable {
          "curly": false,
          "kind": "variable",
          "name": "var",
        },
      },
      "kind": "expressionstatement",
    },
  ],
  "errors": [],
  "kind": "program",
}
`;

exports[`post ++ and + unary 1`] = `
Program {
  "children": [
    ExpressionStatement {
      "expression": Unary {
        "kind": "unary",
        "type": "+",
        "what": Post {
          "kind": "post",
          "parenthesizedExpression": true,
          "type": "+",
          "what": Variable {
            "curly": false,
            "kind": "variable",
            "name": "var",
          },
        },
      },
      "kind": "expressionstatement",
    },
  ],
  "errors": [],
  "kind": "program",
}
`;

exports[`post ++ and - unary (with parens) 1`] = `
Program {
  "children": [
    ExpressionStatement {
      "expression": Unary {
        "kind": "unary",
        "type": "-",
        "what": Post {
          "kind": "post",
          "parenthesizedExpression": true,
          "type": "+",
          "what": Variable {
            "curly": false,
            "kind": "variable",
            "name": "var",
          },
        },
      },
      "kind": "expressionstatement",
    },
  ],
  "errors": [],
  "kind": "program",
}
`;

exports[`post ++ and - unary 1`] = `
Program {
  "children": [
    ExpressionStatement {
      "expression": Unary {
        "kind": "unary",
        "type": "-",
        "what": Post {
          "kind": "post",
          "type": "+",
          "what": Variable {
            "curly": false,
            "kind": "variable",
            "name": "var",
          },
        },
      },
      "kind": "expressionstatement",
    },
  ],
  "errors": [],
  "kind": "program",
}
`;

exports[`post ++ and parens 1`] = `
Program {
  "children": [
    ExpressionStatement {
      "expression": Post {
        "kind": "post",
        "parenthesizedExpression": true,
        "type": "+",
        "what": Variable {
          "curly": false,
          "kind": "variable",
          "name": "var",
        },
      },
      "kind": "expressionstatement",
    },
  ],
  "errors": [],
  "kind": "program",
}
`;

exports[`post -- 1`] = `
Program {
  "children": [
    ExpressionStatement {
      "expression": Post {
        "kind": "post",
        "type": "-",
        "what": Variable {
          "curly": false,
          "kind": "variable",
          "name": "var",
        },
      },
      "kind": "expressionstatement",
    },
  ],
  "errors": [],
  "kind": "program",
}
`;

exports[`post -- and + unary (with parens) 1`] = `
Program {
  "children": [
    ExpressionStatement {
      "expression": Unary {
        "kind": "unary",
        "type": "+",
        "what": Post {
          "kind": "post",
          "parenthesizedExpression": true,
          "type": "-",
          "what": Variable {
            "curly": false,
            "kind": "variable",
            "name": "var",
          },
        },
      },
      "kind": "expressionstatement",
    },
  ],
  "errors": [],
  "kind": "program",
}
`;

exports[`post -- and + unary 1`] = `
Program {
  "children": [
    ExpressionStatement {
      "expression": Unary {
        "kind": "unary",
        "type": "+",
        "what": Post {
          "kind": "post",
          "type": "-",
          "what": Variable {
            "curly": false,
            "kind": "variable",
            "name": "var",
          },
        },
      },
      "kind": "expressionstatement",
    },
  ],
  "errors": [],
  "kind": "program",
}
`;

exports[`post -- and parens 1`] = `
Program {
  "children": [
    ExpressionStatement {
      "expression": Post {
        "kind": "post",
        "parenthesizedExpression": true,
        "type": "-",
        "what": Variable {
          "curly": false,
          "kind": "variable",
          "name": "var",
        },
      },
      "kind": "expressionstatement",
    },
  ],
  "errors": [],
  "kind": "program",
}
`;

exports[`post -- and unary - 1`] = `
Program {
  "children": [
    ExpressionStatement {
      "expression": Unary {
        "kind": "unary",
        "type": "-",
        "what": Post {
          "kind": "post",
          "parenthesizedExpression": true,
          "type": "-",
          "what": Variable {
            "curly": false,
            "kind": "variable",
            "name": "var",
          },
        },
      },
      "kind": "expressionstatement",
    },
  ],
  "errors": [],
  "kind": "program",
}
`;
